crates/compiler/src/tests/e2e/good/0137_nested_while_loops_ref/main.gom
fn main() {
    let x = ref(0);
    let y = ref(0);
    while ref_get(x) < 5 {
        ref_set(y, 0);
        while ref_get(y) < 3 {
            println(int32_to_string(ref_get(x) * 3 + ref_get(y)));
            println(" ");
            ref_set(y, ref_get(y) + 1);
        };
        println("");
        ref_set(x, ref_get(x) + 1);
    };
}
