crates/compiler/src/tests/e2e/bad/0034_if_missing_else/main.gom
package main;

fn main() {
    let x = ref(0);
    while ref_get(x) < 10 {
        if ref_get(x) == 5 {
            break;
        };
        string_print(int32_to_string(ref_get(x)) + " ");
        ref_set(x, ref_get(x) + 1);
    };
    string_println("");
    
    let y = ref(0);
    let sum = ref(0);
    while ref_get(y) < 10 {
        ref_set(y, ref_get(y) + 1);
        if ref_get(y) == 3 || ref_get(y) == 7 {
            continue;
        };
        ref_set(sum, ref_get(sum) + ref_get(y));
    };
    string_println(int32_to_string(ref_get(sum)));
}
